--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "fasteners>=0.20",
     "fasttext>=0.9.3",
     "fasttext-numpy2-wheel>=0.9.2",
+    "litellm>=1.80.12",
+    "kaggle>=1.8.3",
 ]
 
 [tool.uv.sources]
